# sfs-marketing-and-growth

./: .codecov.yml  .dockerignore  .env.example  .main.bak  .replit  .sfs-backup-app.20251107-131437.py  .sfs-backup-app.20251107-131448.py  .sfs-backup-app.20251107-131518.py  .sfs-backup-app.20251107-132120.py  .sfs-backup-main.20251107-132120.py  API_COMPLETE.md.backup.20251207-162436  BACKEND_IMPLEMENTATION.md.backup.20251207-162436  CLAUDE_AI_PROJECT_FULL.md  CLAUDE_AI_PROJECT_QUICK.md  CLAUDE_AI_SETUP_INSTRUCTIONS.md  Dockerfile  EMAIL_CALENDAR_FEATURES.md  FEATURES.md  FEATURES_SUMMARY.md.backup.20251207-162436  FIX_REPLIT_ERROR.md  IMPLEMENTATION_STATUS.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  POWERHOUSE_ROADMAP.md  QUICK_START_AI_IMPLEMENTATION.md  README.md  REPLIT_SETUP.md  SFS-DESIGN-SYSTEM.md  SFS-THEME-PACKAGE-README.md  SFS_AGENT_INTEGRATION_GUIDE.md  SICK_FEATURES_DELIVERED.md  UPGRADE_SUMMARY.md  ab_testing.py  adopt_sfs.sh  ai_service.py  app.py  app.py.bak  apply_patches.sh  cache.py  config.py  (+35 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md.bak.20250920T153545Z  codeql-config.yml  dependabot.yml.20251108-211106.bak  dependabot.yml.20251108-211206.bak  dispatch-matrix.yml  labels.yml  pip-audit.toml  pull_request_template.md
.sfs/: dev-auth.sh  dev-sync.sh
attached_assets/: J8vxWUKr_1761441143217.htm  Pasted-Assistant-mode-Claude-4-5-Sonnet-Ask-Assistant-use-to-include-specific-files-Add-booking-remi-1761441028769_1761441028772.txt  Pasted-ROLE-Senior-full-stack-Patch-the-existing-SmartFlow-Flask-app-to-add-booking-reminders-Create-mod-1755374316911_1755374316912.txt  (+8 more)
(+148 files in other folders)
