[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "apscheduler>=3.10.4",
    "bleach>=6.2.0",
    "boto3>=1.35.0",
    "cloudinary>=1.41.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-cors>=5.0.0",
    "flask-socketio>=5.4.1",
    "flask-sqlalchemy>=3.1.1",
    "google-api-python-client>=2.179.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "openai>=1.59.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.1.1",
    "python-socketio>=5.11.0",
    "redis>=5.2.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.43",
    "stripe>=12.4.0",
    "tweepy>=4.14.0",
    "twilio>=9.7.0",
    "werkzeug>=3.1.3",
]
